--- a/0207-2024-06-28.md
+++ b/0207-2024-06-28.md
@@ -89,6 +89,9 @@ These instructions assume Ubuntu Linux (native, or in a VM).
 ...
 
 
+> [!NOTE]
+> **WHERE DOES lsftdi COME FROM??** Is it part of a package with other things?
+
 
 ## Background
 
@@ -227,5 +230,10 @@ After doing that, you can optionally **also make this permanent** as follows:
 Now, the next time you plug in the board (or cold-start your VM), it should automatically capture the USB device.
 
 
-[0206]: /0206-2024-06-26.md
+# OTHER NOTES
+
+*   Holding internal CPU reset by HKSPI seems to revert to direct clock out rather than DLL...?
+
+
+[0206]: ./0206-2024-06-26.md
 [caravel_board repo]: https://github.com/efabless/caravel_board
