0208: Trying out CI2311 chips

--- a/0168-2023-10-28.md
+++ b/0168-2023-10-28.md
@@ -646,8 +646,8 @@ time flashrom -c $SPICHIP -p $SPIPORT -w goodwolfwalls-2xbgr.bin
 
 *   These are the textures I selected from `assets/allwolfwalls.png`:
     ```ps
-    py texy.py ..\assets\allwolfwalls.png walls.bin `
-        -m 1.4 -b 20 -f 2xbgr -p 1048576 `
+    py texy.py ..\assets\allwolfwalls.png walls.bin \
+        -m 1.4 -b 20 -f 2xbgr -p 1048576 \
         -s 78,79,66,67,46,47,50,51,0,1,2,3,52,53,14,15,16,17,8,9,12,13,32,33,38,39,22,23,44,45,86,87,88,89,98,99,100,101
     ```
 *   LEF files can be viewed in KLayout. They basically just seem to show main area, obstructions (keepouts) per layer, pins per layer, and labels:
