--- a/0207-2024-06-28.md
+++ b/0207-2024-06-28.md
@@ -232,8 +232,26 @@ Now, the next time you plug in the board (or cold-start your VM), it should auto
 
 # OTHER NOTES
 
-*   Holding internal CPU reset by HKSPI seems to revert to direct clock out rather than DLL...?
+*   Holding internal CPU reset by HKSPI seems to revert to direct clock out rather than DLL, just for the duration of the reset pulse...?
 
 
 [0206]: ./0206-2024-06-26.md
 [caravel_board repo]: https://github.com/efabless/caravel_board
+
+
+
+# CI2311 next steps
+
+* [x] Resistors on custom digital input pins.
+* [x] Custom digital input pins driven by RP2040
+* [x] Change RP2040 script to do direct USB reads => UART writes
+* [x] Integrate RP2040 script and new protocol into Pygame
+* [ ] Rework protocol and state machine to derive states directly from upper bits, and hence reduce code?
+* [ ] Try black eval board
+* [ ] Use extra decoupling caps
+* [ ] Watch texture SPI on scope
+* [ ] RP2040 interrupt handler on UART or even on VSYNC or HSYNC (for alternating texture modes per line)
+* [ ] Instead of relying on UART feedback, use another single bit (even gpio) as 'ack'/ready signal.
+* [ ] Figure out how to get disassembly with inline source
+* [ ] Back up existing textures and write new ones
+* [ ] Experiment with texture animation
